[build-system]
requires = ["aiohttp>=3.8.3", "requests>=2.28.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Alerts_in_ua.py"
version = "1.0"
authors = [
  { name="FOUREX", email="Foxtrotserega@gmail.com" },
]
description = "Бібліотека для користування API сайту \"alerts.in.ua\""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Telegram" = "https://t.me/Alerts_in_ua_dot_py"
