[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alerts_in_ua.py"
version = "1.3"
authors = [
  { name="FOUREX", email="Foxtrotserega@gmail.com" },
]
description = "Бібліотека для користування API сайту \"alerts.in.ua\""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/FOUREX/alerts_in_ua.py"
"Telegram" = "https://t.me/Alerts_in_ua_dot_py"
